--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
 body{
     background-image: url("https://giftsforcardplayers.com/wp-content/uploads/2016/10/il_fullxfull.274088266.jpg");
     background-repeat: no-repeat;
-    background-size: 100%;
+    background-size: cover;
     
 }
 
@@ -31,7 +31,7 @@ body{
     margin-left: auto;
     margin-right: auto; 
     height: 500px;
- 
+    transform: scale(0.95);
     max-width: 800px;
     border: 5px solid #dcdcdc;
     /* border-bottom: 100px solid;
