--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,15 @@
 /* ================================================================================ Body and Container */
+.background{
+    width:1200px;
+    height:auto;
+    position:relative;
 
-body{
+}
+.game-background{
+    position:inline-block;
     background-image: url("https://giftsforcardplayers.com/wp-content/uploads/2016/10/il_fullxfull.274088266.jpg");
     background-repeat: no-repeat;
     background-size: cover;
-    
 }
 
 .container{
@@ -267,7 +272,7 @@ body{
     background-image: url("1.jpg");
     background-size: cover;
     background-repeat: no-repeat;
-   
+   position:absolute;
     display: inline-block;
     margin-left:auto;
     margin-right: auto;
@@ -289,6 +294,7 @@ body{
     left:12%;
     z-index: 8;
     text-shadow: 1px 1px 3px black;
+    position:absolute;
 }
 
 .playerNameScore{
@@ -307,6 +313,7 @@ body{
     text-shadow: 1px 1px 3px black;
     transform: rotateY(0deg);
     transition: all 2s;
+    position:absolute;
 }
 
 
@@ -321,7 +328,7 @@ body{
     background-image: url("2.jpg");
     background-size: cover;
     background-repeat: no-repeat;
-
+    position:absolute;
     display: inline-block;
     margin-left:auto;
     margin-right: auto;
@@ -345,6 +352,7 @@ body{
         right:12%;
         z-index: 8;
         text-shadow: 1px 1px 3px black;
+        position:absolute;
     }
 
   
@@ -365,4 +373,69 @@ body{
         text-shadow: 1px 1px 3px black;
         transform: rotateY(0deg);
         transition: all 2s;
+        position:absolute;
     }
+/* ===============================================================Media Query Resizing */
+
+@media only screen and (max-width: 1199px) {
+    body{
+        transform: scale(0.9);
+        transform-origin: top left;
+    }
+}
+@media only screen and (max-width: 1100px) {
+    body{
+        transform: scale(0.85);
+        transform-origin: top left;
+    }
+}
+
+@media only screen and (max-width: 1027px) {
+    body{
+        transform: scale(0.8);
+        transform-origin: top left;
+    }
+}
+
+
+@media only screen and (max-width: 967px) {
+    body{
+        transform: scale(0.75);
+        transform-origin: top left;
+    }
+}
+
+@media only screen and (max-width: 907px) {
+    body{
+        transform: scale(0.7);
+        transform-origin: top left;
+    }
+}
+
+@media only screen and (max-width: 847px) {
+    body{
+        transform: scale(0.65);
+        transform-origin: top left;
+    }
+}
+
+@media only screen and (max-width: 784px) {
+    body{
+        transform: scale(0.6);
+        transform-origin: top left;
+    }
+}
+
+@media only screen and (max-width: 726px) {
+    body{
+        transform: scale(0.55);
+        transform-origin: top left;
+    }
+}
+
+@media only screen and (max-width: 668px) {
+    body{
+        transform: scale(0.5);
+        transform-origin: top left;
+    }
+}
